--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.0.1
-gunicorn==20.1.0
-torch==1.9.0
-transformers==4.9.2
-pydub==0.25.1
-flask-cors==3.0.10
+Flask
+gunicorn
+torch
+transformers
+pydub
+flask-cors
